--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: '3'
 services:
   tcplights:
-    build:
-      context: /home/nuc/docker/projects/tcplighting-mqtt-docker
-      dockerfile: Dockerfile
-    image: result/latest
+    image: henr02/tcplightingwebinterface-mqtt
     ports:
       - "4321:80"
     environment:
@@ -28,16 +25,16 @@ services:
       - USER_EMAIL=ME@TCPLIGHTS.SUCK             # You probably shouldn't change this. If you do, you know why.
       - USER_PASSWORD=ANYTHING                   # You probably shouldn't change this. If you do, you know why.
       - MQTTsub_id=tcp-subscriber                # You probably shouldn't change this. If you do, you know why.
-	                                              # Unique for connecting to server
+                                                  # Unique for connecting to server
       - MQTTpub_id=tcp-publisher                 # You probably shouldn't change this. If you do, you know why. 
-	                                              # Unique for connecting to server
-      - MQTT_prefix=light                        # You probably shouldn't change this. If you do, you know why. 
-	                                              # Topic prefix for lights - ie light/<room-name>/<light-name>/<UniqueBulbID>
+                                                  # Unique for connecting to server
+      - MQTT_prefix=light                        # You probably shouldn't change this. If you do, you know why.
+                                                  # Topic prefix for lights - ie light/<room-name>/<light-name>/<UniqueBulbID>
       - MQTT_control=tcp                         # You probably shouldn't change this. If you do, you know why. 
-	                                              # Control topic identifier for host and script control ie control/<MQTT_control>
+                                                  # Control topic identifier for host and script control ie control/<MQTT_control>
       - HASSTopic_id=homeassistant               # You probably shouldn't change this. If you do, you know why.
-	                                              # Topic prefix for Home Assistant Discovery Topics - this must match with HASS
+                                                  # Topic prefix for Home Assistant Discovery Topics - this must match with HASS
       - HASSOnline=hass/status                   # You probably shouldn't change this. If you do, you know why.
-	                                              # Topic Home Assistant publishes to, to announce its online
+                                                  # Topic Home Assistant publishes to, to announce its online
 
 
