--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,14 +1,12 @@
 Options -Indexes
 
-Order deny,allow 
-Deny from all
-Allow from 127.0.0.1 		#localhost
-Allow from ::1  			#localhost
-Allow from 192.168.1.1/24   #Local Network
-
+Order deny,allow
+Allow from all
+Allow from 127.0.0.1
+Allow from ::1	
+Allow from 192.168.1.1/24
 
 <Files api.php>
 	Order deny,allow
-	deny from all
 	allow from all
 </Files>
